// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticlePublicationDetails should match snapshot with byline 1`] = `
<div
  className="css-kyrcig"
>
  <time>
    May 8th 2018, 19:24
  </time>
   | by me
</div>
`;

exports[`ArticlePublicationDetails should match snapshot without byline 1`] = `
<div
  className="css-kyrcig"
>
  <time>
    May 8th 2018, 19:24
  </time>
  
</div>
`;
